--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animated-scroll-indicators": "^1.0.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress-indicator": "^2.0.6",
     "react-native-gesture-handler": "~2.1.0",
