--- a/app.json
+++ b/app.json
@@ -17,8 +17,7 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.nehawashikar.client-app"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
