--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "client-app",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "expo": "^44.0.6",
+    "expo-dev-client": "~0.8.4",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "install": "^0.13.0",
     "npm": "^8.5.5",
@@ -32,7 +34,6 @@
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.1.0",
-    "expo-splash-screen": "~0.14.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
