--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "expo-dev-client": "~0.8.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^9.6.10",
+    "firebase": "^9.6.11",
     "install": "^0.13.0",
     "npm": "^8.5.5",
     "react": "17.0.1",
@@ -36,7 +36,8 @@
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "undefined": "firebase/auth"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
