--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1",
-    "undefined": "firebase/auth"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
