--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
@@ -33,6 +34,7 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.1.0",
